 - Buffed Double Slash's damage by 25% and nerfed Focused Slash's damage by 16.6%. Decreased Double Slash's MP cost to 6 from 7.
  ~ These changes make Double Slash a relevant skill again, as it does more damage than Focused Slash even if it only hits once. Focused Slash's CRI boost, lower MP cost, and guaranteed hit make the choice between the skills dependant on playstyle.
 - Buffed Cut Down's END penetration from 50% to 100%.
 - Buffed Offensive Stance's stat increase/decrease per stack from 10% to 20%. It now caps at 3 stacks.
 - Buffed Rejuvenation's HRG increase from +5% to +10%.
 - Buffed Fire II's SPI multiplier to 500% (was originally 400%) and nerfed its MP cost to 20 MP (was originally 16 MP).
 - Buffed Ice II's SPI multiplier from 375% to 400%.
 - Buffed Critical Heal I's max effectiveness from +10% to +20%.
 - Nerfed Purify's MP cost to 15 MP (was originally 8 MP).
 - Nerfed Curify MP cost to 30 MP (was originally 18 MP).
 - Nerfed Mana Refund's MP cost to 50 MP (was originally 15 MP).
 - Nerfed Mana Refund's MP recovery to 1% of damage dealt (was originally 5%).
 - Nerfed Foresight's MP cost to 12 MP (was originally 8 MP).
 - Nerfed Inspire's effect to +10% STR and SPI (was originally +12%).
 - Nerfed Lightning II's MP cost to 30 MP (was originally 22 MP).
 - Nerfed Gust's damage by 16.6%.
 - Replaced The Warden's Darkfire with Engulfing Darkness, which is mechanically the same skill, except it does not debuff RES.

RNG Balancing:
 - Made a lot of mechanics based around rare enemies a lot less grindy.
  ~ Doubled the base chance of encountering a rare enemy.
  ~ As rare enemy spawns fail, the spawn chance will increase exponentially, being reset once a rare enemy finally spawns.
  ~ Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
  ~ The Albino Rat and Strange Goblin have been rebalanced to be around the same difficulty as the Rainbow Slime.
 - Buffed the drop rate of all resistance accessories from 2% to 3.33%.
