@@ -458,6 +458,7 @@ Skill Balancing:
   ~ Additionally, Fatigue only lasts for 1 turn after using the skill, while the debuff used to last for 2 turns, making this a buff...?
  - Buffed Double Slash's damage by 25% and nerfed Focused Slash's damage by 16.6%. Decreased Double Slash's MP cost to 6 from 7.
   ~ These changes make Double Slash a relevant skill again, as it does more damage than Focused Slash even if it only hits once. Focused Slash's CRI boost, lower MP cost, and guaranteed hit make the choice between the skills dependant on playstyle.
+ - Reworked Analyze. It now reveals all enemy weaknesses and allows you to see enemy HP for the duration of the battle.
  - Buffed Cut Down's END penetration from 50% to 100%.
  - Buffed Offensive Stance's stat increase/decrease per stack from 10% to 20%. It now caps at 3 stacks.
  - Buffed Rejuvenation's HRG increase from +5% to +10%.
